src/styles/app.scss
/* Write your global styles here, in SCSS syntax. Variables and mixins from the src/variables.scss file are available here without importing */
@tailwind base;
@tailwind components;
@tailwind utilities;

// TODO keep only used fonts
@import url('https://fonts.googleapis.com/css2?family=Monda:wght@400;700&family=Montserrat:wght@300;400;500;700&family=Roboto+Condensed:wght@300;400;700&family=Rubik:wght@300;400;500;700&family=Ubuntu:wght@300&family=Fira+Code:wght@300;500;700&display=swap');
body {
	// font-family: 'Roboto Condensed', sans-serif;
	// font-family: 'Ubuntu', sans-serif;
	background-color: #111827;
	font-family: 'Rubik', sans-serif;
	// font-family: 'Monda', sans-serif;
	// font-family: 'Montserrat', sans-serif;
	// font-family: 'Fredoka One', cursive;
	// font-family: 'Inter', sans-serif;
}

.font-code {
	font-family: 'Fira Code', monospace;
}

::selection {
	background: rgb(0, 140, 196);
	color: white;
}

// Scrollers
::-webkit-scrollbar {
	width: 8px;
	background-color: rgba(22, 22, 22, 0.274);
}

::-webkit-scrollbar-track {
	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
	border-radius: 10px;
}

::-webkit-scrollbar-thumb {
	border-radius: 10px;
	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
}

// p {
// 	width: clamp(45ch, 50%, 75ch);

// 	@media (max-width: 768px) {
// 		width: clamp(40ch, 50%, 100ch);
// 	}
// }

.gradient-text {
	background: linear-gradient(-70deg, #8ec200, #00d6d3, #8ec200, #00d6d3);
	background-size: 400% 400%;
	-webkit-background-clip: text;
	background-clip: text;
	-webkit-animation: gradient 10s ease infinite;
	animation: gradient 10s ease infinite;
	-webkit-text-fill-color: transparent;
	text-shadow: 0 0 #00000000;
	box-decoration-break: clone;
	-webkit-box-decoration-break: clone;
}

@keyframes gradient {
	0% {
		background-position: 0 50%;
	}

	50% {
		background-position: 100% 50%;
	}

	to {
		background-position: 0 50%;
	}
}

